fixed form not working due to z-index error

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -11,7 +11,6 @@ html {
 
 body {
   max-width: 100vw;
-  overflow: hidden;
 }
 
 :root {
